--- a/src/App.css
+++ b/src/App.css
@@ -84,3 +84,12 @@ body{
   border: none;
   border-bottom: 4px solid #7d7d7d ;
 }
+.error-page {
+  left: 0;
+  line-height: 200px;
+  margin-top: -100px;
+  position: absolute;
+  text-align: center;
+  top: 50%;
+  width: 100%;
+}
